# context-compiler

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  M1Design.md  M2M3Addendum.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  stress-tests.yml
demos/: 01_llm_ambiguity_block.py  01_llm_constraint_drift.py  01_llm_contradiction_clarify.py  02_llm_constraint_guardrail.py  02_llm_correction_replacement.py  03_llm_ambiguity_block.py  03_llm_correction_replacement.py  03_llm_premise_guardrail.py  04_llm_tool_denylist_guardrail.py  04_llm_tool_governance.py  05_llm_prompt_drift.py  05_llm_prompt_drift_vs_state.py  06_context_compaction.py  06_llm_context_compaction.py  07_llm_prompt_engineering_comparison.py  07_llm_prompt_vs_state.py  08_llm_replacement_precondition.py  09_llm_pending_clarification.py  README.md  __init__.py  common.py  llm_client.py  run_demo.py
docs/: DescriptionAndMilestones.md  DesignPhilosophy.md  DirectiveGrammarSpec.md  M1Design.md  README.md  api-reference.md  architecture.md  demos-results.md  llm-preprocessor.md  multi-engine.md
evals/: litellm_proxy_additional_findings.md  litellm_proxy_behavioral_comparisons.md
evals/swe-bench/: README.md  RUBRIC.md  SUMMARY.md  manifest.json  swe-bench.py
examples/: 01_persistent_guardrails.py  02_configuration_and_correction.py  03_ambiguity_with_clarification.py  04_tool_governance_denylist.py  05_llm_integration_pattern.py  06_step_sequence_and_checkpoint.py  06_step_sequence_and_state_restore.py  06_transcript_replay.py  07_single_policy_correction.py  08_controller_preview_diff.py  README.md  _provider.py  _util.py
examples/integrations/: README.md  litellm_sdk.py  open_webui_pipe.README.md  open_webui_pipe.py
experimental/: __init__.py
experimental/preprocessor/: README.md  __init__.py  (+5 more)
host_support/: __init__.py  confirmation.py  observability.py
tests/: test_04_grammar_edge_cases.py  test_04_llm_tool_governance.py  test_07_llm_prompt_engineering_comparison.py  test_api_contract_fixture.py  test_compound_directive_properties.py  test_controller.py  test_decision_constants.py  test_demo_01_04_behavior.py  test_demo_05_prompt_contract.py  test_demo_07_output_clarity.py  test_demo_08_09_behavior.py  test_demo_compaction.py  test_demo_oracle_properties.py  test_engine.py  test_example_integrations_imports.py  test_examples.py  test_examples_behavior.py  test_examples_smoke.py  test_fixtures.py  test_grammar.py  test_grammar_api_contract_fixture.py  test_host_confirmation.py  test_host_observability.py  test_litellm_checkpoint_integration.py  test_litellm_integration_error_paths.py  test_litellm_preprocessor_model_config.py  test_litellm_response_format_example.py  test_llm_client.py  test_llm_demos.py  test_ollama_structured_output_example.py  test_openwebui_pipe.py  test_openwebui_preprocessor_pipe.py  test_precompiler_conformance.py  test_precompiler_heuristic.py  test_precompiler_heuristic_properties.py  test_precompiler_output_validation.py  test_precompiler_prompt_utils.py  test_precompiler_validator_properties.py  test_preprocessor_api_contract_fixture.py  test_preprocessor_conformance.py  (+13 more)
(+109 files in other folders)
