[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-compiler"
version = "0.2.0"
description = "Deterministic conversational state engine for LLM applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Robert Lippmann" }]
dependencies = []
keywords = [
  "llm",
  "conversation-state",
  "state-machine",
  "ai-infrastructure",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/rlippmann/context-compiler"
Repository = "https://github.com/rlippmann/context-compiler"
Issues = "https://github.com/rlippmann/context-compiler/issues"

[project.scripts]
context-compiler = "context_compiler.repl:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_compiler"]

[project.optional-dependencies]
demos = [
  "openai>=1.0.0",
]
dev = [
  "pytest",
  "coverage",
  "hypothesis",
  "ruff>=0.12,<1.0",
  "mypy>=1.12,<2.0",
  "pre-commit",
]

[dependency-groups]
dev = [
  "pytest",
  "coverage",
  "hypothesis",
  "ruff>=0.12,<1.0",
  "mypy>=1.12,<2.0",
  "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^tests/"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = false
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
source = ["context_compiler"]
omit = ["demos/*", "tests/*"]
